--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-# file generated 2022-12-02 - see update-dependencies.sh
+# file generated 2022-12-12 - see update-dependencies.sh
 astroid==2.11.7
 attrs==22.1.0
-autopep8==1.7.1
+autopep8==1.7.0
 beautifulsoup4==4.11.1
-boto3==1.25.3
-botocore==1.28.3
-certifi==2022.9.24
+boto3==1.26.27
+botocore==1.29.27
+certifi==2022.12.7
 charset-normalizer==2.1.1
 click==7.1.2
 clickclick==20.10.2
@@ -15,12 +15,11 @@ dataclasses==0.6
 dill==0.3.6
 elifetools==0.28.0
 et3==1.5.2
-exceptiongroup==1.0.0
+exceptiongroup==1.0.4
 Flask==1.1.4
 Flask-Testing==0.8.1
 flex==6.14.1
 idna==3.4
-importlib-metadata==5.0.0
 inflection==0.5.1
 iniconfig==1.1.1
 isbnlib==3.10.12
@@ -36,19 +35,18 @@ lxml==4.9.1
 MarkupSafe==2.0.1
 mccabe==0.7.0
 newrelic==4.20.1.121
-packaging==21.3
-platformdirs==2.5.2
+packaging==22.0
+platformdirs==2.6.0
 pluggy==1.0.0
-pycodestyle==2.9.1
+pycodestyle==2.10.0
 pyflakes==2.5.0
 pylint==2.14.5
-pyparsing==3.0.9
 pytest==7.2.0
 pytest-cov==2.10.1
 python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2022.5
+pytz==2022.6
 PyYAML==5.4.1
 requests==2.28.1
 requests-aws==0.1.8
@@ -59,14 +57,14 @@ s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.3.2.post1
 strict-rfc3339==0.7
-swagger-spec-validator==3.0.2
+swagger-spec-validator==3.0.3
+toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.4.0
 Unidecode==1.3.6
-urllib3==1.26.12
+urllib3==1.26.13
 uWSGI==2.0.21
 validate-email==1.3
 Werkzeug==0.16.1
 wrapt==1.14.1
-zipp==3.10.0
