--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ python_version = "3.8"
 
 [packages]
 boto3 = "~=1.8"
-connexion = "~=1.5"
+connexion = "~=2.0"
 et3 = "~=1.5"
 elifetools = "==0.31.0"
 flex = "~=6.14"
@@ -26,7 +26,8 @@ requests-aws = "~=0.1"
 # pinned, dependency is unstable and breaks in higher versions.
 requests-cache = "==0.4.13"
 rfc3339 = "~=6.0"
-Flask = "~=1.0"
+# not semver, it removes major features in minor versions
+Flask = "==2.2.*"
 PyYAML = "~=5.4"
 # lsh@2023-02-17: CVE-2023-25577
 Werkzeug = ">=2.2.3"
