--- a/requirements.txt
+++ b/requirements.txt
@@ -9,17 +9,18 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
 clickclick==20.10.2
-connexion==1.5.3
+connexion==2.14.2
 coverage==4.5.4
 dataclasses==0.6
 dill==0.3.6
 elifetools==0.31.0
 et3==1.5.2
 exceptiongroup==1.1.0
-Flask==1.1.2
+Flask==2.2.3
 Flask-Testing==0.8.1
 flex==6.14.1
 idna==3.4
+importlib-metadata==6.0.0
 inflection==0.5.1
 iniconfig==2.0.0
 isbnlib==3.10.13
@@ -57,7 +58,6 @@ s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.4
 strict-rfc3339==0.7
-swagger-spec-validator==3.0.3
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.6
@@ -68,3 +68,4 @@ uWSGI==2.0.21
 validate-email==1.3
 Werkzeug==2.2.3
 wrapt==1.14.1
+zipp==3.13.0
