--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,71 @@
-# file generated 2023-01-27 - see update-dependencies.sh
+# file generated 2023-02-17 - see update-dependencies.sh
 astroid==2.11.7
-attrs==22.1.0
+attrs==22.2.0
 autopep8==1.7.0
-beautifulsoup4==4.11.1
-boto3==1.26.27
-botocore==1.29.27
+beautifulsoup4==4.11.2
+boto3==1.26.73
+botocore==1.29.73
 certifi==2022.12.7
-charset-normalizer==2.1.1
-click==7.1.2
+charset-normalizer==3.0.1
+click==8.1.3
 clickclick==20.10.2
-connexion==1.5.3
+connexion==2.14.2
 coverage==4.5.4
 dataclasses==0.6
 dill==0.3.6
 elifetools==0.31.0
 et3==1.5.2
-exceptiongroup==1.0.4
-Flask==1.1.4
+exceptiongroup==1.1.0
+Flask==2.2.3
 Flask-Testing==0.8.1
 flex==6.14.1
 idna==3.4
+importlib-metadata==6.0.0
 inflection==0.5.1
-iniconfig==1.1.1
-isbnlib==3.10.12
+iniconfig==2.0.0
+isbnlib==3.10.13
 isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.2.0
 jsonpointer==2.3
 jsonschema==2.6.0
-lazy-object-proxy==1.8.0
-lxml==4.9.1
-MarkupSafe==2.0.1
+lazy-object-proxy==1.9.0
+lxml==4.9.2
+MarkupSafe==2.1.2
 mccabe==0.7.0
 newrelic==4.20.1.121
-packaging==22.0
-platformdirs==2.6.0
+packaging==23.0
+platformdirs==3.0.0
 pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==2.5.0
 pylint==2.14.5
-pytest==7.2.0
+pytest==7.2.1
 pytest-cov==2.10.1
 python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2022.6
+pytz==2022.7.1
 PyYAML==5.4.1
-requests==2.28.1
+requests==2.28.2
 requests-aws==0.1.8
 requests-cache==0.4.13
 rfc3339==6.2
 rfc3987==1.3.8
 s3transfer==0.6.0
 six==1.16.0
-soupsieve==2.3.2.post1
+soupsieve==2.4
 strict-rfc3339==0.7
-swagger-spec-validator==3.0.3
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.6
-typing_extensions==4.4.0
+typing_extensions==4.5.0
 Unidecode==1.3.6
-urllib3==1.26.13
+urllib3==1.26.14
 uWSGI==2.0.21
 validate-email==1.3
-Werkzeug==0.16.1
+Werkzeug==2.2.3
 wrapt==1.14.1
+zipp==3.13.0
