--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,65 @@
-# file generated 2023-05-26 - see update-dependencies.sh
-astroid==2.15.5
+# file generated 2023-07-26 - see update-dependencies.sh
+astroid==2.15.6
 attrs==23.1.0
 autopep8==2.0.2
 beautifulsoup4==4.12.2
-boto3==1.26.141
-botocore==1.29.141
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-coverage==7.2.6
-dill==0.3.6
+boto3==1.28.11
+botocore==1.31.11
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+coverage==7.2.7
+dill==0.3.7
 elifetools==0.32.0
 et3==1.5.2
-exceptiongroup==1.1.1
+exceptiongroup==1.1.2
 Flask==2.2.5
 Flask-Testing==0.8.1
 idna==3.4
-importlib-metadata==6.6.0
-importlib-resources==5.12.0
+importlib-metadata==6.8.0
+importlib-resources==6.0.0
 iniconfig==2.0.0
 isbnlib==3.10.14
 isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
-joblib==1.2.0
-jsonschema==4.17.3
+joblib==1.3.1
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
 lazy-object-proxy==1.9.0
-lxml==4.9.2
-MarkupSafe==2.1.2
+lxml==4.9.3
+MarkupSafe==2.1.3
 mccabe==0.7.0
-newrelic==8.8.0
+newrelic==8.8.1
 packaging==23.1
 pkgutil_resolve_name==1.3.10
-platformdirs==3.5.1
-pluggy==1.0.0
+platformdirs==3.9.1
+pluggy==1.2.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pylint==2.17.4
-pyrsistent==0.19.3
-pytest==7.3.1
+pytest==7.4.0
 pytest-cov==4.1.0
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 python-slugify==1.2.6
 pytz==2023.3
+referencing==0.30.0
 requests==2.31.0
 requests-aws4auth==1.2.3
 requests-cache==0.5.2
 rfc3339==6.2
+rpds-py==0.9.2
 s3transfer==0.6.1
 six==1.16.0
 soupsieve==2.4.1
 tomli==2.0.1
 tomlkit==0.11.8
-typing_extensions==4.6.2
+typing_extensions==4.7.1
 Unidecode==1.3.6
 urllib3==1.26.16
 uWSGI==2.0.21
-Werkzeug==2.3.4
+Werkzeug==2.3.6
 wrapt==1.15.0
-zipp==3.15.0
+zipp==3.16.2
